- fixed z-indexing lower text

--- a/src/styles/pagesStyles/indexPage.scss
+++ b/src/styles/pagesStyles/indexPage.scss
@@ -49,6 +49,7 @@
         bottom: 180px;
         left: 290px;
         transform: rotate(-90deg);
+        z-index: 10;
     }
 
     #rect1 {
@@ -91,6 +92,7 @@
         bottom: -5px;
         right: -5px;
         border-top: 1px solid black;
+        border-left: 1px solid black;
     }
 
     #rect5 {
@@ -110,8 +112,8 @@
         background-color: #ffffff;
         width: 100px;
         height: 100px;
-        bottom: -30px;
-        right: -20px;
+        bottom: -40px;
+        right: -21px;
     }
 
 }
